# potato-disease-classification

./: README.md  main.py  pyproject.toml  research.ipynb
api/: main-tf-serving.py  requirements.txt
models/: 1.h5
saved_models/: 1.h5
