[project]
name = "potato-disease-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "tensorflow==2.20.0",
    "tensorflow-serving-api==2.20.0",
    "uvicorn>=0.49.0",
]
